--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html>
+Ôªø<html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
 </head>
 <body bgcolor="black">
 <center>
-<h2><font color=yellow>Hello ¡Àﬂﬂﬂﬂﬂ“‹!</font></h2>
+<h2><font color=yellow>Hello –ë–õ–Ø–Ø–Ø–Ø–Ø–¢–¨!</font></h2>
 <font color=blue>ABOBA ABOBA</font>
 </center>
 </body>
