--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body bgcolor="black">
 <center>
-<h2><font color=yellow>Hello БЛЯЯЯЯЯТЬ!!!</font></h2>
+<h2><font color=yellow>Hello world!!!</font></h2>
 <font color=blue>ABOBA ABOBA</font>
 </center>
 </body>
